# Proyecto2OS

./: .gitignore  CEThread.c  CEThread.h  CEThread1.c  CEThread1.h  CMakeLists.txt  README.md  main.c
AntsInterface/: CMakeLists.txt  antsInterface.c  functions.c  main.c  variables.c
CEThread/: CEThread.c  CEThread.h  CEThread_List.c  CEThread_List.h
Resources/: Canal1.conf  Canal2.conf  Canal3.conf  hormigas.conf
Scheduler/: CMakeLists.txt  LinkedList.c  LinkedList.h  Scheduler.c  Scheduler.h  SchedulingAlgorithms.c  SchedulingAlgorithms.h  ThreadsQueue.c  ThreadsQueue.h  main.c  mainSheduler.c
Synchronizer/: synchronizer.c  synchronizer.h
